--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_create_chat.xml
@@ -16,7 +16,7 @@
         android:tileMode="repeat">
 
 
-        <ImageButton
+        <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/chat_headline_close_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
