--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_signup.xml
@@ -34,7 +34,7 @@
             android:textSize="@dimen/font_size_16"
             android:textStyle="bold" />
 
-        <ImageButton
+        <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/close_dialog_button"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
