--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_news_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_news_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
         android:id="@+id/share_news_to_wall_button"
@@ -102,21 +103,21 @@
                     android:layout_weight="1"
                     android:gravity="center">
 
-                    <ImageView
+                    <android.support.v7.widget.AppCompatImageView
                         android:id="@+id/likes_icon"
                         android:layout_width="@dimen/width_26"
                         android:layout_height="@dimen/height_26"
                         android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_like"
-                        android:backgroundTint="?newsLikeIcon" />
+                        app:backgroundTint="?newsLikeIcon" />
 
-                    <ImageView
+                    <android.support.v7.widget.AppCompatImageView
                         android:id="@+id/likes_icon_liked"
                         android:layout_width="@dimen/width_26"
                         android:layout_height="@dimen/height_26"
                         android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_like"
-                        android:backgroundTint="?newsLikedIcon"
+                        app:backgroundTint="?newsLikedIcon"
                         android:visibility="gone" />
 
 
@@ -136,13 +137,13 @@
                     android:layout_weight="1"
                     android:gravity="center">
 
-                    <ImageView
+                    <android.support.v7.widget.AppCompatImageView
                         android:id="@+id/pin_icon"
                         android:layout_width="@dimen/width_26"
                         android:layout_height="@dimen/height_26"
                         android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_pin"
-                        android:backgroundTint="?newsPinIcon" />
+                        app:backgroundTint="?newsPinIcon" />
 
 
                     <TextView
@@ -161,13 +162,13 @@
                     android:layout_weight="1"
                     android:gravity="center">
 
-                    <ImageView
+                    <android.support.v7.widget.AppCompatImageView
                         android:id="@+id/share_icon"
                         android:layout_width="@dimen/width_26"
                         android:layout_height="@dimen/height_26"
                         android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_share"
-                        android:backgroundTint="?newsShareIcon" />
+                        app:backgroundTint="?newsShareIcon" />
 
 
                     <TextView
@@ -186,13 +187,13 @@
                     android:layout_weight="1"
                     android:gravity="center">
 
-                    <ImageView
+                    <android.support.v7.widget.AppCompatImageView
                         android:id="@+id/comments_icon"
                         android:layout_width="@dimen/width_26"
                         android:layout_height="@dimen/height_26"
                         android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_comment"
-                        android:backgroundTint="?newsCommentIcon" />
+                        app:backgroundTint="?newsCommentIcon" />
 
 
                     <TextView
@@ -368,7 +369,7 @@
         android:background="?postCommentContainerColor"
         android:visibility="gone">
 
-        <EditText
+        <android.support.v7.widget.AppCompatEditText
             android:id="@+id/post_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -379,12 +380,12 @@
             android:layout_marginEnd="@dimen/margin_20"
             android:layout_toEndOf="@+id/uploaded_image"
             android:layout_toStartOf="@+id/post_post_button"
-            android:backgroundTint="?postCommentContainerColor"
+            app:backgroundTint="?postCommentContainerColor"
             android:hint="@string/enter_comment_hint"
             android:textColor="?postCommentTextColor"
             android:textColorHint="?postCommentHintColor" />
 
-        <ImageView
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/post_post_button"
             android:layout_width="@dimen/width_25"
             android:layout_height="wrap_content"
