--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_wall.xml
@@ -65,19 +65,19 @@
                     android:layout_alignTop="@+id/uploaded_image"
                     android:src="@drawable/removephotobutton"
                     android:layout_alignEnd="@+id/uploaded_image"/>
-                <EditText
+                <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/post_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_margin="@dimen/margin_10"
-                    android:backgroundTint="@color/colorPrimary"
+                    app:backgroundTint="@color/colorPrimary"
                     android:hint="@string/write_post_hint"
                     android:layout_toEndOf="@+id/uploaded_image"
                     android:layout_toStartOf="@+id/post_post_button"
                     android:textColor="?wallEditSearchText"
                     android:textColorHint="?wallEditSearchHint" />
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/post_post_button"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="match_parent"
@@ -104,13 +104,13 @@
                 android:layout_centerVertical="true"
                 android:gravity="center"
                 android:orientation="horizontal">
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/camera_button"
                     android:layout_width="@dimen/width_40"
                     android:layout_height="match_parent"
                     android:src="?chatCameraIcon"
                     android:tint="?colorPrimarySemiLight" />
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/image_button"
                     android:layout_width="@dimen/width_40"
                     android:layout_height="match_parent"
@@ -180,13 +180,13 @@
             android:layout_alignParentStart="true"
             android:visibility="gone">
 
-            <EditText
+            <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/search_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_margin="@dimen/margin_10"
-                android:backgroundTint="@color/colorPrimary"
+                app:backgroundTint="@color/colorPrimary"
                 android:hint="@string/search_wall_posts_hint"
                 android:textColor="?wallEditSearchText"
                 android:textColorHint="?wallEditSearchHint" />
