--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_join_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_join_chat.xml
@@ -14,7 +14,7 @@
         android:background="?colorPrimarySemiLight"
         android:clickable="true">
 
-        <ImageButton
+        <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/chat_join_headline_close_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
