--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
@@ -176,7 +176,7 @@
                     android:src="@drawable/removephotobutton"
                     android:visibility="gone" />
 
-                <EditText
+                <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/post_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -184,11 +184,11 @@
                     android:layout_margin="@dimen/margin_10"
                     android:layout_toEndOf="@+id/uploaded_image"
                     android:layout_toStartOf="@+id/post_post_button"
-                    android:backgroundTint="@color/transparent"
+                    app:backgroundTint="@color/transparent"
                     android:hint="@string/write_post_hint"
                     android:textColor="?phoneWallEditSearchText" />
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/post_post_button"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="match_parent"
@@ -218,14 +218,14 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/camera_button"
                     android:layout_width="@dimen/width_40"
                     android:layout_height="match_parent"
                     android:src="?chatCameraIcon"
                     android:tint="?colorPrimarySemiLight" />
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/image_button"
                     android:layout_width="@dimen/width_40"
                     android:layout_height="match_parent"
@@ -302,13 +302,13 @@
             android:clickable="true"
             android:visibility="gone">
 
-            <EditText
+            <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/search_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_margin="@dimen/margin_10"
-                android:backgroundTint="@color/transparent"
+                app:backgroundTint="@color/transparent"
                 android:hint="@string/search_wall_posts_hint"
                 android:textColor="?phoneWallEditSearchText" />
         </RelativeLayout>
