--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_chat.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
-        <ImageButton
+        <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
