--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_profile.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
-            <ImageButton
+            <android.support.v7.widget.AppCompatImageButton
                 android:id="@+id/close"
                 android:layout_width="@dimen/standard_button_height"
                 android:layout_height="@dimen/standard_button_height"
