--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_login.xml
@@ -264,7 +264,7 @@
         android:layout_alignParentTop="true"
         android:background="@drawable/phone_background"
         android:orientation="horizontal">
-        <ImageButton
+        <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/close_dialog_button"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
