--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent">
 
-                    <ImageButton
+                    <android.support.v7.widget.AppCompatImageButton
                         android:id="@+id/close_dialog_button"
                         android:layout_width="@dimen/standard_button_height"
                         android:layout_height="@dimen/standard_button_height"
