--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/row_chat_search_expandable_child.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/row_chat_search_expandable_child.xml
@@ -2,16 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?green_dark_2"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:background="?green_dark_2">
     <RelativeLayout
         android:id="@+id/row_join_chat_search_list_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:visibility="visible"
         android:layout_alignParentTop="true"
-        android:visibility="visible">
+        android:layout_alignParentStart="true">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/row_join_chat_search_list"
@@ -22,11 +21,10 @@
         <Button
             android:id="@+id/row_join_chat_search_join"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_35"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/row_join_chat_search_list"
-            android:background="?light_button_chat"
+            android:background="?colorAccent"
             android:text="@string/join_group"
-            android:textAllCaps="false"
             android:textColor="@color/colorPrimary" />
 
     </RelativeLayout>
