--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/row_chat_search_expandable_parent.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/row_chat_search_expandable_parent.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -46,50 +46,19 @@
                     android:tint="?light_green_1" />
 
                 <TextView
-                    android:id="@+id/row_join_chat_search_friends_count"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/row_join_chat_search_members_count"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/row_join_chat_search_icon"
-                    android:textColor="?light_green_1" />
-
-                <TextView
-                    android:id="@+id/row_join_chat_search_members_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toEndOf="@id/row_join_chat_search_friends_count"
-                    android:layout_toStartOf="@+id/row_last_chat_label"
                     android:textColor="?colorPrimaryLight" />
-
-                <TextView
-                    android:id="@+id/row_last_chat_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@+id/row_last_chat_time"
-                    android:text="@string/last_chat"
-                    android:textColor="?colorPrimaryLight"
-                    android:textSize="@dimen/font_size_12" />
-
-                <TextView
-                    android:id="@+id/row_last_chat_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/margin_4"
-                    android:textAlignment="viewEnd"
-                    android:textColor="?colorAccent"
-                    android:textSize="@dimen/font_size_12" />
 
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
-
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_1"
         android:layout_alignParentBottom="true"
-        android:background="?black_transparent_154" />
+        android:layout_height="@dimen/height_1"
+        android:background="?black_transparent_154"/>
 </RelativeLayout>
