--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_join_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_join_chat.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@color/background_phone"
+    android:background="?background_phone"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -102,7 +102,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
-                    android:background="@color/green_dark_phone_3"
+                    android:background="?green_dark_phone_3"
                     android:gravity="center"
                     android:text="@string/create_chat"
                     android:textColor="?white_semitransparent" />
@@ -113,7 +113,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
-                    android:background="@color/background_phone"
+                    android:background="?background_phone"
                     android:gravity="center"
                     android:text="@string/join_chat"
                     android:textColor="?white" />
@@ -123,7 +123,7 @@
                     android:layout_width="@dimen/space_0"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@color/green_dark_phone_3"
+                    android:background="?green_dark_phone_3"
                     android:gravity="center"
                     android:visibility="gone"
                     android:text="@string/request"
@@ -157,14 +157,14 @@
             android:layout_height="@dimen/height_50"
             android:layout_below="@+id/top_vertical_spliter"
             android:layout_toStartOf="@+id/chat_join_search_button"
-            android:background="@color/green_dark_phone_4"
+            android:background="?green_dark_phone_4"
             android:gravity="start|center_vertical"
             android:hint="@string/search_public_chats"
             android:imeOptions="flagNoExtractUi"
             android:maxLines="1"
             android:padding="@dimen/margin_14"
             android:textColor="@color/white"
-            android:textColorHint="?white_semitransparent"
+            android:textColorHint="?white"
             android:textSize="@dimen/font_size_14" />
 
         <ImageButton
@@ -175,9 +175,6 @@
             android:layout_below="@+id/top_vertical_spliter"
             android:background="?colorPrimaryLight"
             android:src="@drawable/ic_search" />
-
-
-
 
 
         <base.app.util.ui.AnimatedExpandableListView
@@ -214,6 +211,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:textSize="@dimen/font_size_12"
             android:gravity="center"
             android:padding="@dimen/padding_8"
             android:text="@string/public_chats_your_friends_are_in"
