--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
@@ -14,7 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorAccentLight">
-
+<View
+    android:id="@+id/base_line_spliter"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_alignParentTop="true"/>
         <RelativeLayout
             android:id="@+id/fragment_holder"
             android:layout_width="match_parent"
