--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
@@ -325,12 +325,12 @@
     <RelativeLayout
         android:id="@+id/fragment_wall_bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_60"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_height="@dimen/standard_button_height"
         android:background="?phoneWallMenuBackground"
         android:clickable="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_above="@+id/shadow_1"
+        android:layout_alignParentStart="true">
 
         <Button
             android:id="@+id/fragment_wall_new_post"
