--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
@@ -35,7 +35,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
-                        android:background="@drawable/image_wall_background" />
+                        android:background="@drawable/image_wall_background"
+                        android:scaleType="centerCrop"/>
 
                     <RelativeLayout
                         android:id="@+id/wall_top_info_container"
