--- a/SportsSideKick/app/src/sportsidekick/res/layout/news_list_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/news_list_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_200"
-    android:layout_margin="@dimen/margin_10">
+    android:layout_height="@dimen/height_200">
 
     <ImageView
         android:id="@+id/image"
