--- a/SportsSideKick/app/src/sportsidekick/res/layout/row_rumours.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/row_rumours.xml
@@ -1,53 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/width_55"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/row_rumors_description"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="2">
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textColor="?rumourSmallContentColor"
+        android:textSize="@dimen/font_size_11"
+        android:paddingStart="@dimen/padding_8"
+        android:paddingEnd="@dimen/padding_8"
+        android:paddingTop="@dimen/padding_8"
+        android:paddingBottom="@dimen/padding_2"/>
 
-        <TextView
-            android:id="@+id/row_rumors_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_gravity="center_vertical"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="@dimen/margin_15"
-            android:layout_marginEnd="@dimen/margin_15"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:textColor="?rumourSmallContentColor"
-            android:textSize="@dimen/font_size_11" />
-    </RelativeLayout>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/row_rumors_time"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/margin_15"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:textSize="@dimen/font_size_11"
-            android:id="@+id/row_rumors_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_5"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="?lightGrey" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/row_rumors_description"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="?lightGrey"
+        android:textSize="@dimen/font_size_11"
+        android:paddingStart="@dimen/padding_8"
+        android:paddingEnd="@dimen/padding_8"
+        android:paddingBottom="@dimen/padding_8"
+        android:paddingTop="@dimen/padding_2"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_2"
-        android:background="?rumourSmallSeparatorColor" />
+        android:layout_height="@dimen/margin_1"
+        android:background="?rumourSmallSeparatorColor"
+        android:layout_below="@+id/row_rumors_time"/>
 
-</LinearLayout>
+</RelativeLayout>
+
