--- a/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_tip.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_tip.xml
@@ -40,23 +40,24 @@
             android:layout_toEndOf="@+id/row_wall_small_cell_headline_container"
             android:layout_toStartOf="@+id/tip_image"
             android:ellipsize="end"
+            android:textSize="@dimen/font_size_14"
             android:isScrollContainer="false"
-            android:lineSpacingMultiplier="1.2"
+            android:lineSpacingMultiplier="1.1"
             android:maxLines="3"
             android:minLines="3"
-            android:padding="@dimen/padding_16"
+            android:padding="@dimen/padding_8"
             android:text="@string/try_to_following_the_official_sporting_account"
             android:textColor="?wallItemTipTextContentColor"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/tip_image"
-            android:layout_width="@dimen/width_60"
-            android:layout_height="@dimen/height_60"
+            android:layout_width="@dimen/width_40"
+            android:layout_height="@dimen/width_40"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/margin_15"
-            android:layout_marginStart="@dimen/margin_15"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10"
             android:src="@drawable/tip_item" />
     </RelativeLayout>
 </RelativeLayout>
