--- a/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_user_post.xml
@@ -26,11 +26,10 @@
             android:src="@drawable/news_holder_image"
             android:visibility="visible" />
 
-
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
-            android:layout_width="@dimen/width_60"
-            android:layout_height="@dimen/height_60"
+            android:layout_width="@dimen/width_50"
+            android:layout_height="@dimen/width_50"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="@dimen/margin_10"
@@ -54,14 +53,14 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/user_details"
         android:layout_below="@id/images_container"
-        android:layout_marginEnd="@dimen/margin_20"
-        android:layout_marginStart="@dimen/margin_20"
+        android:layout_marginEnd="@dimen/margin_10"
+        android:layout_marginStart="@dimen/margin_10"
         android:layout_marginTop="@dimen/margin_10"
         android:ellipsize="end"
         android:maxLines="2"
         android:minLines="2"
         android:textColor="?wallUserContentTextColor"
-        android:textSize="@dimen/font_size_16" />
+        android:textSize="@dimen/font_size_12" />
 
     <RelativeLayout
         android:id="@+id/user_details"
@@ -83,8 +82,8 @@
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/comments_icon"
-                android:layout_width="@dimen/width_20"
-                android:layout_height="@dimen/height_20"
+                android:layout_width="@dimen/width_15"
+                android:layout_height="@dimen/height_15"
                 android:layout_marginEnd="@dimen/margin_2"
                 android:background="@drawable/ic_comment"
                 app:backgroundTint="?lightGrey" />
@@ -114,16 +113,16 @@
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/likes_icon"
-                    android:layout_width="@dimen/width_20"
-                    android:layout_height="@dimen/height_20"
+                    android:layout_width="@dimen/width_15"
+                    android:layout_height="@dimen/height_15"
                     android:layout_marginEnd="@dimen/margin_2"
                     android:background="@drawable/ic_like"
                     app:backgroundTint="?lightGrey" />
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/liked_icon"
-                    android:layout_width="@dimen/width_20"
-                    android:layout_height="@dimen/height_20"
+                    android:layout_width="@dimen/width_15"
+                    android:layout_height="@dimen/width_15"
                     android:layout_marginEnd="@dimen/margin_2"
                     android:background="@drawable/ic_like"
                     app:backgroundTint="?colorAccent"
