--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_rumours.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_rumours.xml
@@ -11,7 +11,7 @@
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
         android:elevation="@dimen/elevation_2"
-        android:visibility="gone"
+        android:visibility="visible"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 
 
@@ -27,11 +27,13 @@
             android:id="@+id/fragment_rumors_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            android:visibility="visible"
+            android:fillViewport="true">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <RelativeLayout
                     android:id="@+id/fragment_rumors_top_container"
@@ -41,8 +43,10 @@
                     <ImageView
                         android:id="@+id/fragment_rumors_top_image"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/rumours_top_image_heihgt"
-                        android:background="@drawable/img_rumours_top_image" />
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/image_rumours_background"
+                        android:scaleType="centerCrop"
+                        android:adjustViewBounds="true"/>
 
                     <TextView
                         android:id="@+id/fragment_rumors_top_headline"
@@ -59,7 +63,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/fragment_rumors_all_big_list"
                     android:layout_width="match_parent"
-                    android:layout_marginTop="@dimen/margin_negative_8"
+                    android:layout_marginTop="@dimen/margin_negative_30"
                     android:paddingEnd="@dimen/padding_8"
                     android:paddingStart="@dimen/padding_8"
                     android:layout_height="wrap_content"
@@ -323,28 +327,8 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/fragment_rumors_recycler_view"
                     android:layout_width="match_parent"
-
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/fragment_rumors_all_big_list" />
-
-                <!--<com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout-->
-                <!--android:id="@+id/rumours_swipe_refresh_layout"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="300dp"-->
-                <!--android:layout_alignParentEnd="true"-->
-                <!--android:layout_below="@+id/fragment_rumors_all_big_list"-->
-                <!--android:paddingEnd="@dimen/padding_8"-->
-                <!--android:paddingStart="@dimen/padding_8"-->
-                <!--app:srl_direction="bottom"-->
-                <!--android:background="?black_transparent_154">-->
-
-
-                <!--<android.support.v7.widget.RecyclerView-->
-                <!--android:id="@+id/fragment_rumors_recycler_view"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"/>-->
-
-                <!--</com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>-->
 
             </RelativeLayout>
         </android.support.v4.widget.NestedScrollView>
