--- a/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_news.xml
@@ -55,12 +55,12 @@
                 android:layout_alignParentEnd="true"
                 android:gravity="center">
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/comments_icon"
-                    android:layout_width="@dimen/width_20"
-                    android:layout_height="@dimen/height_20"
-                    android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_comment" />
+                    android:layout_width="@dimen/width_15"
+                    android:layout_height="@dimen/width_15"
+                    android:background="@drawable/ic_comment"
+                    android:layout_marginEnd="@dimen/margin_2" />
 
                 <TextView
                     android:id="@+id/comments_count"
@@ -79,13 +79,12 @@
                 android:layout_toStartOf="@id/comments_container"
                 android:gravity="center">
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/likes_icon"
-                    android:layout_width="@dimen/width_20"
-                    android:layout_height="@dimen/height_20"
+                    android:layout_width="@dimen/width_15"
+                    android:layout_height="@dimen/height_15"
                     android:layout_marginEnd="@dimen/margin_2"
                     android:background="@drawable/ic_like" />
-
 
                 <TextView
                     android:id="@+id/likes_count"
