--- a/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
@@ -392,7 +392,7 @@
 
 
     <!-- Alert dialog style -->
-    <style name="AlertDialog" parent="@android:style/Theme.Dialog">
+    <style name="AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:textColor">@color/green_dark_3</item>
     </style>
 
